--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -35,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figure1.svg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
