--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -38,35 +38,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure1.svg\">"
+    "<img src=\"./figurer/figur1.svg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure2_1.svg\">"
+    "<img src=\"./figurer/figur2_1.svg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure2_2.svg\">"
+    "<img src=\"./figurer/figur2_2.svg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure2_3.svg\">"
+    "<img src=\"./figurer/figur2_3.svg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure3.svg\">"
+    "<img src=\"./figurer/figur3.svg\">"
    ]
   },
   {
