--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Termodynamikens första huvudsats\n",
     "\n",
-    "$$ \\require{cancel} dE = \\cancel{d}Q \\, + \\cancel{d} W  $$"
+    "$$ dE = \\cancel{d}Q \\, + \\cancel{d} W  $$"
    ]
   },
   {
