--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -6,75 +6,396 @@
    "source": [
     "# Introduktion\n",
     "\n",
-    "Hugo Strand (2020)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Termodynamikens första huvudsats\n",
+    "Hugo Strand (2020)\n",
     "\n",
-    "$$ dE = \\cancel{d}Q \\, + \\cancel{d} W  $$"
+    "- Förkunskaper: Flervariabelanalys och klassisk mekanik.\n",
+    "- Textbok: F. Mandl, *Statistical Physics*, 2nd Ed.\n",
+    "\n",
+    "Översikt\n",
+    "- Mikro- och makro-tillstånd\n",
+    "- Termodynamikens första och andra huvudsatser\n",
+    "- Temperaturhärledning\n",
+    "- Fundamentala termodynamiska relationen\n",
+    "- Termodynamiska potentialer\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mikroskopisk och Makroskopisk Fysik\n",
+    "\n",
+    "Ex: Gas i en behållare\n",
+    "\n",
+    "<img src=\"./figurer/figur1.svg\">\n",
+    "\n",
+    "__Mikrotillstånd__:\n",
+    "- $N$ atomer\n",
+    "- Positioner $\\vec{r}_1, \\vec{r}_2, \\dots, \\vec{v}_N$\n",
+    "- Hastigheter $\\vec{v}_1, \\vec{v}_2, \\dots, \\vec{v}_N$\n",
+    "\n",
+    "**Makrotillstånd**:\n",
+    "- $N$ atomer\n",
+    "- Intern energi $E$ (totala energin i interna frihetsgrader, t.ex. $E_{kin}$)\n",
+    "- Volym $V$\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Energikonservering\n",
+    "\n",
+    "Process: $E_1 \\rightarrow E_2$\n",
+    "\n",
+    "Isolerat system: $$E_2 - E_1 = \\Delta E = W$$\n",
+    "där $W$ är arbetet utfört *på* systemet.\n",
+    "\n",
+    "Ej isolerat system: $\\Delta E \\ne W$\n",
+    "$$\\Delta E - W = Q$$\n",
+    "där $Q$ är mängden tillförd värme \n",
+    "\n",
+    "$\\quad \\Rightarrow \\quad \n",
+    "\\Delta E = Q + W \n",
+    "\\quad \\Leftrightarrow \\quad \n",
+    "dE = dQ + dW$\n",
+    "\n",
+    "Arbete $W$ och värme $Q$ är två typer av *energiöverföring*.\n",
+    "\n",
+    "För processen: $E_1 \\rightarrow E_2$\n",
+    "\n",
+    "$$ \\Delta E = E_2 - E_1 \\quad\\quad \\text{väldefinierad} $$\n",
+    "$$ \\Delta E = Q + W \\quad\\quad \\text{väldefinierad} $$\n",
+    "\n",
+    "Men $Q$ och $W$ är *ej* väldefinierade, då de beror på *hur* processe gjordes.\n",
+    "\n",
+    "$E$ beror bara på start- och slut-punkt\n",
+    "\n",
+    "$\\Rightarrow \\quad E$ är en **tillståndsfunktion**.\n",
+    "\n",
+    "## Termodynamikens första huvudsats\n",
+    "\n",
+    "$$ dE = \\cancel{d}Q \\, + \\cancel{d} W \\quad\\quad \\text{(TD1)} $$\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tankeexperiment\n",
+    "\n",
+    "Isolerat system med en gas\n",
+    "\n",
+    "### 1. Jämvikt (med vägg)\n",
+    "\n",
+    "Intern energy $E_1$, volym $V_1$ och antal atomer $N_1$\n",
+    "\n",
+    "<img src=\"./figurer/figur2_1.svg\">\n",
+    "\n",
+    "### 2. Ta bort väggen (icke jämvikt)\n",
+    "\n",
+    "<img src=\"./figurer/figur2_2.svg\">\n",
+    "\n",
+    "### 3. Ny jämvikt\n",
+    "\n",
+    "<img src=\"./figurer/figur2_3.svg\">\n",
+    "\n",
+    "$$ N_3 = N_1 , V_3 = 2 V_1 $$\n",
+    "\n",
+    "$$ \\text{(TD1) :} \\quad dE = \\cancel{d}Q + \\cancel{d}W = 0 \\quad \\Rightarrow E_3 = E_1$$\n",
+    "\n",
+    "## Fråga:\n",
+    "\n",
+    "Varför observerar vi aldrig processen $3 \\rightarrow 2$?\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Svar:\n",
+    "\n",
+    "Sannorlikheten för $N \\approx 10^{23}$ atomer att spontant geonomgå $3 \\rightarrow 2$ är *försummbar*.\n",
+    "\n",
+    "Eftersom:\n",
+    "\n",
+    "- Antal homogena *mikrotillstånd* $\\gg$ antal *mikrotillstånd* med alla partiklar till vänster.\n",
+    "\n",
+    "Fluktuationer: $\\sim \\frac{1}{\\sqrt{N}} \\sim 10^{-10} \\ll 1$ (se textboken)\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kvantifiering\n",
+    "\n",
+    "### Definition: Statistiska vikten av ett *makrotillstånd* $\\Omega$\n",
+    "\n",
+    "Jämvikt:\n",
+    "\n",
+    "$$ \\Omega = \\Omega(E,V,N) = \\left( \\begin{array}{c} \\text{Andel mikrotillstånd motsv.}\\\\ \\text{makrotillståndet (E,V,N)} \\end{array} \\right) $$\n",
+    "\n",
+    "Icke jämvikt:\n",
+    "\n",
+    "$$ \\Omega = \\Omega(E,V,N, \\alpha) $$\n",
+    "\n",
+    "där $\\alpha$ är övriga makroskopiska icke jämvikts parametrar, se exempel nedan.\n",
+    "\n",
+    "### Postulat\n",
+    "\n",
+    "**(i)** Alla mikrotillstång kompatibla med ett makrotillstånd $(E,V,N,\\alpha)$ är lika sannorlika.\n",
+    "\n",
+    "**(ii)** Termodynamisk jämvikt svarar mot $\\alpha$ som maximerar $\\Omega(E,V,N,\\alpha)$.\n",
+    "\n",
+    "### Deifiniton: Entropi $S \\equiv k \\ln \\Omega$\n",
+    "\n",
+    "Mått på oordning i ett givet makrotillstånd $\\approx$ antal mikrotillstånd som systemet fluktuerar mellan.\n",
+    "\n",
+    "($S$ lättare att använda i praktiken än $\\Omega$)\n",
+    "\n",
+    "Postulat **(i)** och **(ii)** $\\Rightarrow$ \n",
+    "- För ett isolerat system ökar entropin $S$ och i jämvikt har $S$ sitt maximala värde.\n",
+    "\n",
     "# Termodynamikens andra huvudsats\n",
     "\n",
-    "$$ dS \\ge 0 $$"
+    "För ett isolerat system\n",
+    "$$ dS \\ge 0 \\quad \\quad \\text{(TD2)} $$\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing testing"
+    "# Härledning av temperatur\n",
+    "\n",
+    "Isolerat system med en gas och konstant $E$, $V$, $N$\n",
+    "\n",
+    "Dela upp i två delar (1) och (2)\n",
+    "\n",
+    "$$ E = E_1 + E_2 \\\\ V = V_1 + V_2 \\\\ N = N_1 + N_2 $$\n",
+    "\n",
+    "<img src=\"./figurer/figur3.svg\">\n",
+    "\n",
+    "För hela systemet\n",
+    "\n",
+    "$$ \\Omega = \\Omega_1 \\cdot \\Omega_2 $$\n",
+    "\n",
+    "Totala entropin\n",
+    "\n",
+    "$$ S = k \\ln \\Omega = k \\ln \\left( \\Omega_1 \\cdot \\Omega_2 \\right) = k \\ln \\Omega_1 + k \\ln \\Omega_2 = S_1 + S_2$$\n",
+    "\n",
+    "Icke jämvikt: \n",
+    "$$S = S(E,V,N,\\alpha) \\, , \\quad \\text{låt } \\alpha = \\{ E_1, V_1, N_1 \\}$$\n",
+    "\n",
+    "$$ \\Rightarrow \\quad\\quad\n",
+    "S = S(E,V,N,E_1,V_1,N_1) = S_1(E_1, V_1, N_1) + S_2(E_2, V_2, N_2) $$\n",
+    "\n",
+    "**Låt:** Separationen vara en värmeledande vägg\n",
+    "\n",
+    "$\\Rightarrow \\quad dV_1 = dN_1 = 0$, isolerad $\\cancel{dW}=0$, (TD1) $dE_1 = \\cancel{d}Q + \\cancel{d}W = \\cancel{d}Q$\n",
+    "\n",
+    "D.v.s. värme kan flöda mellan (1) och (2).\n",
+    "\n",
+    "#### Förväntan: Vid jämvikt har (1) och (2) samma temperatur $T_1 = T_2$\n",
+    "\n",
+    "Antag jämvikt: (TD2) $\\Rightarrow dS = 0$\n",
+    "\n",
+    "$$ \n",
+    "0 \n",
+    "= \n",
+    "\\left( \\frac{\\partial S}{\\partial E_1} \\right)_{E,V,N;V_1,N_1} \n",
+    "=\n",
+    "\\left( \\frac{\\partial S_1}{\\partial E_1} \\right)_{V_1,N_1} \n",
+    "+\n",
+    "\\left( \\frac{\\partial S_2}{\\partial E_2} \\right)_{V_2,N_2}\n",
+    "\\frac{dE_1}{dE_1}\n",
+    "$$\n",
+    "\n",
+    "eftersom $E_2 = E - E_1$, $\\frac{dE_2}{dE_1} = -1$ får vi jämviktsvillkoret\n",
+    "\n",
+    "$$ \\left( \\frac{\\partial S_1}{\\partial E_1} \\right)_{V_1,N_1} \n",
+    "=\n",
+    "\\left( \\frac{\\partial S_2}{\\partial E_2} \\right)_{V_2,N_2} $$\n",
+    "\n",
+    "vilket måste vara relaterat till temperaturerna hos (1) och (2)\n",
+    "\n",
+    "#### Definition: Temperatur $$T \\equiv \\left( \\frac{\\partial E}{\\partial S} \\right)_{V,N}$$\n",
+    "\n",
+    "Vilket innebär\n",
+    "$$ \\Rightarrow \\quad \\left( \\frac{\\partial S_1}{\\partial E_1} \\right)_{V_1,N_1} \n",
+    "=\n",
+    "\\left( \\frac{\\partial S_2}{\\partial E_2} \\right)_{V_2,N_2} \n",
+    "\\quad \\Leftrightarrow \\quad\n",
+    "\\frac{1}{T_1} = \\frac{1}{T_2}\n",
+    "\\quad \\Leftrightarrow \\quad\n",
+    "T_1 = T_2\n",
+    "$$\n",
+    "\n",
+    "I jämvikt har båda delarna (1) och (2) samma temperatur.\n",
+    "\n",
+    "## Koll: \n",
+    "\n",
+    "Icke jämvikt och (TD2): $dS > 0$\n",
+    "\n",
+    "$$ \\Rightarrow \\quad\n",
+    "\\frac{dS}{dt} = \n",
+    "\\left(\\frac{1}{T_1} - \\frac{1}{T_2}\\right) \\frac{dE_1}{dt} > 0 $$\n",
+    "\n",
+    "Om $T_1 < T_2$ så är $dE_1 > 0$, d.v.s. värme flödar från den varma delen (2) till den kalla (1).\n",
+    "\n",
+    "$\\Rightarrow$ Temperatur definitionen $T \\equiv \\left( \\frac{\\partial E}{\\partial S} \\right)_{V,N}$ stämmer med våra förväntningar.\n",
+    "\n",
+    "## Utmaning\n",
+    "\n",
+    "Härled ytterligare två jämvikts villkor genom att behandla fallet med rörlig vägg ($dV_1 \\ne 0$) och genomträngligt membran ($dN_1 \\ne 0$).\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figurer/figur1.svg\">"
+    "# Konjungerade variabler\n",
+    "\n",
+    "Temperaturen $T$, definierad enligt\n",
+    "\n",
+    "$$T \\equiv \\left( \\frac{\\partial E}{\\partial S} \\right)_{V,N}$$\n",
+    "\n",
+    "kallas för *konjungerad* variabel till entropin $S$. \n",
+    "\n",
+    "På samma sätt är trycket $P$\n",
+    "\n",
+    "$$ P \\equiv - \\left( \\frac{\\partial E}{\\partial V} \\right)_{S,N}$$\n",
+    "\n",
+    "konjungerad till volymen $V$ och den kemiska potentialen $\\mu$\n",
+    "\n",
+    "$$ \\mu \\equiv \\left( \\frac{\\partial E}{\\partial N} \\right)_{S,V}$$\n",
+    "\n",
+    "konjungerad till partikelantalet $N$.\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figurer/figur2_1.svg\">"
+    "# Fundamentala Termodynamiska Relationen\n",
+    "\n",
+    "Entropi $S = S(E,V,N)$ lös för $E$ ger\n",
+    "\n",
+    "$$ E = E(S,V,N) $$\n",
+    "\n",
+    "För förändringar mellan jämviktstillstånd\n",
+    "\n",
+    "$$ \n",
+    "dE =\n",
+    "\\left( \\frac{\\partial E}{\\partial S} \\right)_{V,N}\n",
+    "dS\n",
+    "+\n",
+    "\\left( \\frac{\\partial E}{\\partial V} \\right)_{S,N}\n",
+    "dV\n",
+    "+\n",
+    "\\left( \\frac{\\partial E}{\\partial N} \\right)_{S,V}\n",
+    "dN\n",
+    "$$\n",
+    "\n",
+    "Insättning av konjungerade variabler ger\n",
+    "\n",
+    "$$dE = T dS - P dV + \\mu dV \\quad\\quad \\text{(FTR)}$$\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figurer/figur2_2.svg\">"
+    "# Termodynamiska potentialer\n",
+    "\n",
+    "Intern energi $E$\n",
+    "\n",
+    "$$ E = E(S,V,N) $$\n",
+    "\n",
+    "Helmholtz fria energi $F$\n",
+    "\n",
+    "$$ F = F(T,V,N) $$\n",
+    "\n",
+    "Entalpi $H$\n",
+    "\n",
+    "$$ H = H(S,P,N) $$\n",
+    "\n",
+    "Gibbs fria energi $G$\n",
+    "\n",
+    "$$ G = G(T,P,N) $$\n",
+    "\n",
+    "Val av potential beror på system.\n",
+    "\n",
+    "$F$, $H$ och $G$ kan härledas från $E$ med hjälp av Legendre transform.\n",
+    "\n",
+    "## Exempel: Helmholtz fria energi $F$\n",
+    "\n",
+    "$$ F = E - TS $$\n",
+    "\n",
+    "$$ dF = dE - TdS - SdT = \\left[ \\begin{array}{c} \\text{Ins.} \\\\ \\text{(FDR)} \\end{array} \\right] \\\\\n",
+    "= TdS - PdV + \\mu dV - TdS - SdT \\\\ \n",
+    "= - SdT - PdV + \\mu dN$$\n",
+    "\n",
+    "$$ dF = - SdT - PdV + \\mu dN \\quad \\Rightarrow \\quad F = F(T, V, N) \\quad \\blacksquare$$\n",
+    "\n",
+    "På samma sätt\n",
+    "\n",
+    "$$ H = E + PV \\quad \\Rightarrow \\quad H = H(S,P,N) $$\n",
+    "\n",
+    "$$ G = E - TS + PV \\quad \\Rightarrow \\quad G = G(T,P,N) $$\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figurer/figur2_3.svg\">"
+    "# Sammanfattning\n",
+    "\n",
+    "- Termodynamikens första huvudsats: $$dE = \\cancel{d}Q + \\cancel{d}W$$\n",
+    "\n",
+    "- Termodynamikens andra huvudsats: \n",
+    "\n",
+    "$$dS \\ge 0 \\quad \\quad \\text{(isolerat system)}$$\n",
+    "\n",
+    "- Temperatur $T$ \n",
+    "\n",
+    "$$T \\equiv \\left( \\frac{\\partial E}{\\partial S} \\right)_{V,N}$$\n",
+    "\n",
+    "- Fundamentala termodynamiska relationen\n",
+    "\n",
+    "$$dE = T dS - P dV + \\mu dV$$\n",
+    "\n",
+    "- Termodynamiska potentialer<br><br>\n",
+    "\n",
+    "  - Intern energi $$E = E(S,V,N)$$\n",
+    "  \n",
+    "  - Helmholtz fria energi $$F = F(T,V,N) = E - TS$$\n",
+    "  \n",
+    "  - Entalpi $$H = H(S,P,N) = E + PV$$\n",
+    "  \n",
+    "  - Gibbs fria energi $$G = G(T,P,N) = E - TS + PV$$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./figurer/figur3.svg\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
