--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "**Låt:** Separationen vara en värmeledande vägg\n",
     "\n",
-    "$\\Rightarrow \\quad dV_1 = dN_1 = 0$, isolerad $\\cancel{dW}=0$, (TD1) $dE_1 = \\cancel{d}Q + \\cancel{d}W = \\cancel{d}Q$\n",
+    "$\\Rightarrow \\quad dV_1 = dN_1 = 0$, isolerad $\\cancel{d}W=0$, (TD1) $dE_1 = \\cancel{d}Q + \\cancel{d}W = \\cancel{d}Q$\n",
     "\n",
     "D.v.s. värme kan flöda mellan (1) och (2).\n",
     "\n",
