--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ \\require{cancel} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Introduktion\n",
     "\n",
     "Hugo Strand (2020)\n",
@@ -399,6 +406,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
