req cancel everywhere

--- a/Föreläsning1.ipynb
+++ b/Föreläsning1.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\require{cancel} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Introduktion\n",
     "\n",
     "Hugo Strand (2020)\n",
@@ -86,7 +79,7 @@
     "\n",
     "## Termodynamikens första huvudsats\n",
     "\n",
-    "$$ dE = \\cancel{d}Q \\, + \\cancel{d} W \\quad\\quad \\text{(TD1)} $$\n",
+    "$$ \\require{cancel} dE = \\cancel{d}Q \\, + \\cancel{d} W \\quad\\quad \\text{(TD1)} $$\n",
     "\n",
     "***"
    ]
@@ -115,7 +108,7 @@
     "\n",
     "$$ N_3 = N_1 , V_3 = 2 V_1 $$\n",
     "\n",
-    "$$ \\text{(TD1) :} \\quad dE = \\cancel{d}Q + \\cancel{d}W = 0 \\quad \\Rightarrow E_3 = E_1$$\n",
+    "$$ \\require{cancel} \\text{(TD1) :} \\quad dE = \\cancel{d}Q + \\cancel{d}W = 0 \\quad \\Rightarrow E_3 = E_1$$\n",
     "\n",
     "## Fråga:\n",
     "\n",
@@ -212,7 +205,7 @@
     "\n",
     "**Låt:** Separationen vara en värmeledande vägg\n",
     "\n",
-    "$\\Rightarrow \\quad dV_1 = dN_1 = 0$, isolerad $\\cancel{d}W=0$, (TD1) $dE_1 = \\cancel{d}Q + \\cancel{d}W = \\cancel{d}Q$\n",
+    "$\\Rightarrow \\quad dV_1 = dN_1 = 0$, isolerad $\\require{cancel} \\cancel{d}W=0$, (TD1) $\\require{cancel} dE_1 = \\cancel{d}Q + \\cancel{d}W = \\cancel{d}Q$\n",
     "\n",
     "D.v.s. värme kan flöda mellan (1) och (2).\n",
     "\n",
@@ -379,7 +372,7 @@
    "source": [
     "# Sammanfattning\n",
     "\n",
-    "- Termodynamikens första huvudsats: $$dE = \\cancel{d}Q + \\cancel{d}W$$\n",
+    "- Termodynamikens första huvudsats: $$\\require{cancel} dE = \\cancel{d}Q + \\cancel{d}W$$\n",
     "\n",
     "- Termodynamikens andra huvudsats: \n",
     "\n",
